-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
DB Integration & Observability
-
Fully Compatible
-
ALL
-
QI 2023-11-13
-
175
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This ticket covers $setWindowFields failures related to window bounds re-parsing in BF-30324.
"Was not able to re-parse queryStats key when reading queryStats.Status Location5339900: Lower bound must not exceed upper bound: [1, 0] Hash: 9438084818423628190 Query Shape: { cmdNs: { db: \"test\", coll: \"comprehensive_parse\" }, command: \"aggregate\", pipeline: [ { $sort: { partition: 1, partitionSeq: -1 } }, { $_internalSetWindowFields: { partitionBy: \"$partition\", sortBy: { partitionSeq: -1 }, output: { x: { $first: \"$a\", window: { documents: [ 1, \"current\" ] } } } } } ] }"
Bounds derived from the output.window.documents and output.window.range fields can hit this error.
- is depended on by
-
SERVER-85096 TRACKING: M3 Correctness Tickets
-
- Closed
-
- is duplicated by
-
SERVER-82006 $setWindowFields window unit fails to re-parse
-
- Closed
-
-
SERVER-82008 $setWindowFields $expMovingAvg alpha arg fails to re-parse
-
- Closed
-
- is related to
-
SERVER-75596 Stress $queryStats read path for aggregation
-
- Closed
-