SERVER-82007 Fix setWindowFields re-parsing errors * Fix representative query re-parsing issues for setWindowFields parameters: expMovingAvg.alpha, window.document, window.range, window.unit * Add an optional parameter to serializeLiteral to allow overriding the representative value