src/mongo/db/matcher/expression_internal_eq_hashed_key.h
@@ -103,13 +103,7 @@ public:
     void appendSerializedRightHandSide(BSONObjBuilder* bob,
                                        const SerializationOptions& opts = {},
                                        bool includePath = true) const final {
-        if (opts.literalPolicy == LiteralSerializationPolicy::kToRepresentativeParseableValue) {
-            // We need to make sure the value added to bob is of type NumberLong, so it can be
-            // re-parsed successfully.
-            bob->append(name(), (long long)1);
-            return;
-        }
-        opts.appendLiteral(bob, name(), _rhs);
+        opts.appendLiteral(bob, name(), _rhs, Value((long long)1));
     }
 };
 
