src/mongo/db/pipeline/document_source_set_window_fields_test.cpp
@@ -36,6 +36,7 @@
 #include "mongo/bson/bsonobjbuilder.h"
 #include "mongo/bson/json.h"
 #include "mongo/db/exec/document_value/document.h"
+#include "mongo/db/exec/document_value/document_value_test_util.h"
 #include "mongo/db/pipeline/aggregation_context_fixture.h"
 #include "mongo/db/pipeline/document_source.h"
 #include "mongo/db/pipeline/document_source_mock.h"
@@ -451,7 +452,7 @@ TEST_F(DocumentSourceSetWindowFieldsTest, RedactionOnPushWithRangeWindowWithUnit
                                 "unbounded",
                                 "?number"
                             ],
-                            "unit": "?string"
+                            "unit": "month"
                         }
                     }
                 }
@@ -459,5 +460,99 @@ TEST_F(DocumentSourceSetWindowFieldsTest, RedactionOnPushWithRangeWindowWithUnit
         })",
         redact(*docSource));
 }
+
+/**
+ * Helper function that parses the $setWindowFields aggregation stage from the input, serializes it
+ * to its representative shape, re-parses the representative shape, and compares to the original.
+ */
+void assertRepresentativeShapeIsStable(auto expCtx,
+                                       BSONObj inputStage,
+                                       BSONObj expectedRepresentativeStage) {
+    auto parsedStage =
+        DocumentSourceInternalSetWindowFields::createFromBson(inputStage.firstElement(), expCtx);
+    std::vector<Value> serialization;
+    auto opts = SerializationOptions{LiteralSerializationPolicy::kToRepresentativeParseableValue};
+    parsedStage->serializeToArray(serialization, opts);
+
+    auto serializedStage = serialization[0].getDocument().toBson();
+    ASSERT_BSONOBJ_EQ(serializedStage, expectedRepresentativeStage);
+
+    auto roundTripped = DocumentSourceInternalSetWindowFields::createFromBson(
+        serializedStage.firstElement(), expCtx);
+
+    std::vector<Value> newSerialization;
+    roundTripped->serializeToArray(newSerialization, opts);
+    ASSERT_EQ(newSerialization.size(), 1UL);
+    ASSERT_VALUE_EQ(newSerialization[0], serialization[0]);
+}
+
+TEST_F(DocumentSourceSetWindowFieldsTest, RoundTripSerializationDocumentWindowBounds) {
+    assertRepresentativeShapeIsStable(getExpCtx(),
+                                      fromjson(R"(
+        {$_internalSetWindowFields: {partitionBy: '$state', sortBy: {city: 1}, output: {mySum:
+        {$sum: '$pop', window: {documents: [-10, 10]}}}}})"),
+                                      fromjson(R"(
+        {$_internalSetWindowFields: {partitionBy: '$state', sortBy: {city: 1}, output: {mySum:
+        {$sum: '$pop', window: {documents: [0, 1]}}}}})"));
+}
+
+TEST_F(DocumentSourceSetWindowFieldsTest, RoundTripSerializationRangeWindowBounds) {
+    assertRepresentativeShapeIsStable(getExpCtx(),
+                                      fromjson(R"(
+        {$_internalSetWindowFields: {partitionBy: '$state', sortBy: {city: 1}, output: {mySum:
+        {$sum: '$pop', window: {range: [-10, 10]}}}}})"),
+                                      fromjson(R"(
+        {$_internalSetWindowFields: {partitionBy: '$state', sortBy: {city: 1}, output: {mySum:
+        {$sum: '$pop', window: {range: [0, 1]}}}}})"));
+}
+
+TEST_F(DocumentSourceSetWindowFieldsTest, RoundTripSerializationRangeWindowBoundsWithUnit) {
+    assertRepresentativeShapeIsStable(getExpCtx(),
+                                      fromjson(R"(
+        {$_internalSetWindowFields: {partitionBy: '$state', sortBy: {city: 1}, output: {mySum:
+        {$sum: '$pop', window: {range: [-10, 10], unit: 'second'}}}}})"),
+                                      fromjson(R"(
+        {$_internalSetWindowFields: {partitionBy: '$state', sortBy: {city: 1}, output: {mySum:
+        {$sum: '$pop', window: {range: [0, 1], unit: 'second'}}}}})"));
+}
+
+TEST_F(DocumentSourceSetWindowFieldsTest, RoundTripSerializationExpMovingAvg) {
+    assertRepresentativeShapeIsStable(getExpCtx(),
+                                      fromjson(
+                                          R"({
+            $setWindowFields: {
+                partitionBy: '$foo.bar',
+                sortBy: {
+                    bar: 1
+                },
+                output: {
+                    x: {
+                        $expMovingAvg: {
+                            alpha: 0.5,
+                            input: '$y'
+                        }
+                    }
+                }
+            }
+        })"),
+                                      fromjson(
+                                          R"({
+            $_internalSetWindowFields: {
+                partitionBy: '$foo.bar',
+                sortBy: {
+                    bar: 1
+                },
+                output: {
+                    x: {
+                        $expMovingAvg: {
+                            alpha: 0.1,
+                            input: '$y'
+                        }
+                    }
+                }
+            }
+        })"));
+}
+
 }  // namespace
 }  // namespace mongo
